@@ -1,21 +1,32 @@
 class AdminController < ApplicationController
+
+  before_filter :authorize, :except => :login
+
   def login
+	unless session[:admin]
 		if request.get?
-			session[:user_id] = nil
+			session[:admin] = nil
 			@user = Recepcionista.new
 		else
-			@user = Recepcionista.new(params[:user])
+			@user = Recepcionista.new(params[:recepcionista])
 			logged_in_user = @user.try_to_login
 			if logged_in_user
-				session[:admin_id] = logged_in_user.id
+				session[:admin] = logged_in_user
 				redirect_to(:action => "index")
 			else
 				flash[:notice] = "Login ou senha inválidos."
 			end
 		end
+	else
+		flash[:notice] = "Already logged in."
+		redirect_to(:action => "index")
+	end
   end
 
   def logout
+	session[:admin] = nil
+	flash[:notice] = "Logged out"
+	redirect_to(:action => "login")
   end
 
 end
