@@ -12,4 +12,12 @@ class ApplicationController < ActionController::Base
   # Uncomment this to filter the contents of submitted sensitive data parameters
   # from your application log (in this case, all fields with names like "password"). 
   # filter_parameter_logging :password
+
+  def authorize
+	unless session[:admin]
+	   flash[:notice] = "Please log in"
+	   redirect_to(:action => "login")
+	end
+  end
+
 end
